# python-project-49

./: .gitignore  Makefile  README.md  demo.cast  pyproject.toml
brain_games/: cli.py  engine.py  result_of_game.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
games/: calc.py  gcd.py  prime.py
