[tool.poetry]
name = "brain-games"
version = "0.1.0"
description = "Игры разума - это проект, который состоит из 5 игр, таких как: "Проверка на четность" (Пользователь определяет является ли число четным), "Калькулятор" (Пользователь определяет результаты вычислений), "НОД" (Пользователь определяет наибольший общий делитель двух чисел), "Арифметическая прогрессия" (Пользователь определяет пропущенное число арифметической прогрессии), "Простое ли число?" (Пользователь определяет является ли число простым). Каждая игра запускается как отдельный скрипт, при трех верных ответах игра завершается с победой пользователя, при неверном ответе игра завершается и пользователю засчитывается поражение."
authors = [name = "Георгий" email = "<kuman8443@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Manreed/python-project-49"
packages = [
	{include = "brain_games"},
	]
classifiers = [
	Programming Language :: Python :: 3 :: Only
	Operating System :: OS Independent
	Environment :: MacOS X
	Natural Language :: Russian
	Topic :: Games/Entertainment :: Arcade


[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
